--- a/hw-wc.cabal
+++ b/hw-wc.cabal
@@ -61,6 +61,7 @@ common hw-simd                  { build-depends: hw-simd                  >= 0.1
 common lens                     { build-depends: lens                     >= 4.15       && < 5      }
 common mmap                     { build-depends: mmap                     >= 0.5.9      && < 0.6    }
 common optparse-applicative     { build-depends: optparse-applicative     >= 0.13       && < 0.16   }
+common parallel                 { build-depends: parallel                 >= 3.2.2.0    && < 3.3    }
 common resourcet                { build-depends: resourcet                >= 1.1        && < 1.3    }
 common text                     { build-depends: text                     >= 1.2.2      && < 2.0    }
 common vector                   { build-depends: vector                   >= 0.12.0.1   && < 0.13   }
@@ -100,6 +101,7 @@ library
                       , hw-rankselect
                       , hw-rankselect-base
                       , hw-simd
+                      , parallel
                       , semigroups
                       , transformers
                       , vector
@@ -107,6 +109,7 @@ library
                         HaskellWorks.Wc.ByteWise
                         HaskellWorks.Wc.Char
                         HaskellWorks.Wc.Counts
+                        HaskellWorks.Wc.List
                         HaskellWorks.Wc.StateMachine
                         HaskellWorks.Wc.Word64
   other-modules:        Paths_hw_wc
