--- a/hw-wc.cabal
+++ b/hw-wc.cabal
@@ -63,10 +63,8 @@ common mmap                       { build-depends: mmap                       >=
 common optparse-applicative       { build-depends: optparse-applicative       >= 0.13       && < 0.16   }
 common resourcet                  { build-depends: resourcet                  >= 1.1        && < 1.3    }
 common text                       { build-depends: text                       >= 1.2.2      && < 2.0    }
+common transformers               { build-depends: transformers               >= 0.4        && < 0.6    }
 common vector                     { build-depends: vector                     >= 0.12.0.1   && < 0.13   }
-
-common semigroups                 {  if (!impl(ghc >= 8.0.1)) { build-depends: semigroups   >= 0.8.4  && <  0.19  } }
-common transformers               {  if (!impl(ghc >= 8.0.1)) { build-depends: transformers >= 0.4    && <  0.6   } }
 
 common config
   default-language:     Haskell2010
@@ -100,7 +98,6 @@ library
                       , hw-rankselect
                       , hw-rankselect-base
                       , hw-simd
-                      , semigroups
                       , transformers
                       , vector
   exposed-modules:      HaskellWorks.Wc.Broadword
@@ -131,7 +128,6 @@ executable hw-wc
                       , lens
                       , optparse-applicative
                       , resourcet
-                      , semigroups
                       , text
                       , transformers
                       , vector
